@@ -1,6 +1,7 @@
 package Klondike;
 
 import Base.Card;
+import Base.Color;
 import Base.Value;
 
 import java.util.ArrayList;
@@ -8,66 +9,65 @@ import java.util.List;
 
 public class Tableau {
 
-    private List<List<Card>> tableau;
+    private List<Column> tableau;
 
     public Tableau(int columns) {
         this.tableau = new ArrayList<>();
         for (int i = 0; i < columns; i++) {
-            tableau.add(new ArrayList<>());
+            tableau.add(new Column());
         }
     }
 
-    public List<Card> getDeck(int pos) {
+
+
+    public Column getDeck(int pos) {
         return this.tableau.get(pos);
     }
 
-    public boolean isEmpty(){
-        for (List<Card> cards: tableau){
-            if (!cards.isEmpty()) {
-                return false;
-            }
-        }
-        return true;
+    public boolean isEmpty() {
+        return tableau.stream().allMatch(Column::isEmpty);
     }
 
     private boolean isValidPosition(int pos) {
         return pos >= 0 && pos < tableau.size();
     }
 
-    public Card getLast(int pos){
-        return tableau.get(pos).get((tableau.get(pos).size() - 1));
+    public Card getLast(int pos) {
+        Column column = tableau.get(pos);
+        return column.isEmpty() ? null : column.getLast();
     }
 
-    public boolean canReceive(Card card, int deckPosition){
-        if(isValidPosition(deckPosition)){
-            if ((tableau.get(deckPosition).isEmpty()) && (card.getValue() == Value.KING)){
+    public boolean canReceive(Card card, int deckPosition) {
+        if (isValidPosition(deckPosition)) {
+            Column column = tableau.get(deckPosition);
+
+            if (column.isEmpty() && card.getValue() == Value.KING) {
                 return true;
-            } else if (!tableau.get(deckPosition).isEmpty()){
+            } else if (!column.isEmpty()) {
                 int lastValue = getLast(deckPosition).getValue().getNumber();
                 int receivedValue = card.getValue().getNumber();
-                String lastColor = getLast(deckPosition).getSuit().getColor();
-                String receivedColor = card.getSuit().getColor();
+                Color lastColor = getLast(deckPosition).getSuit().getColor();
+                Color receivedColor = card.getSuit().getColor();
                 boolean precedingValue = (lastValue - receivedValue) == 1;
-                boolean sameColor = lastColor.equals(receivedColor);
-                return (!sameColor && precedingValue);
+                boolean sameColor = lastColor == receivedColor;
+                return !sameColor && precedingValue;
             }
         }
         return false;
     }
 
     public void addCard(Card card, int deckPos) {
-        if ((card != null) && (deckPos <= tableau.size())) {
-            if(canReceive(card, deckPos)) {
-                tableau.get(deckPos).add(card);
-            }
+        if (card != null && deckPos < tableau.size() && canReceive(card, deckPos)) {
+            tableau.get(deckPos).addCard(card);
         }
     }
 
-    public Card drawCard(int from){
-        if(tableau.get(from).isEmpty()) {
+    public Card drawCard(int from) {
+        Column column = tableau.get(from);
+        if (column.isEmpty()) {
             return null;
         }
-        return tableau.get(from).remove(tableau.get(from).size() - 1);
+        return column.drawCard();
     }
 
     public void addCardSequence(List<Card> cards, int toDeck) {
